# implementation-project

./: .gitignore  README.md  noxfile.py
.github/workflows/: merge.yml  publish.yml  test.yml
actions/tests/: test_simple.py
dependencies/: bardzo_duza_rzezba.py
dependencies/pep723/: README.md
dependencies/pip_venv/: README.md  requirements_lock_versions.txt
dependency_management_demo/pep723/: huge_sculpture.py
dependency_management_demo/poetry/: README.md  pyproject.toml
dependency_management_demo/uv/: README.md  pyproject.toml
src/sample/: simple.py
tests/: __init__.py  test_simple.py
